--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+ .classpath
+        .project
+:wq
 # Compiled class file
 *.class
 
@@ -21,3 +24,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
+.classPath
+.project
+.settings
